centralize style.css

--- a/engineering_notebook/ch02.html
+++ b/engineering_notebook/ch02.html
@@ -8,334 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        /* 页面基础设置 */
-        @page {
-            size: A4;
-            margin: 0;
-        }
-
-        body {
-            background-color: #525659;
-            font-family: 'Noto Sans SC', sans-serif;
-            padding: 20px;
-            color: #333;
-            line-height: 1.6;
-            transition: background-color 0.3s;
-        }
-
-        .sheet {
-            width: 210mm;
-            min-height: 297mm;
-            padding: 18mm 20mm 20mm 25mm;
-            background-image: url('../assets/general/background.jpg');
-            background-size: auto 100%;
-            background-repeat: no-repeat;
-            background-position: left center;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            margin: 0 auto 20px auto;
-            position: relative;
-            box-sizing: border-box;
-            overflow: hidden;
-            page-break-after: always;
-        }
-
-        /* 标题体系 */
-        h1 {
-            color: #D35400;
-            font-size: 32px;
-            border-bottom: 4px dashed #E67E22;
-            padding-bottom: 10px;
-            margin-bottom: 20px;
-            font-family: "Microsoft YaHei", sans-serif;
-            text-align: center;
-        }
-
-        h2 {
-            color: #2E86C1;
-            font-size: 24px;
-            background-color: #D6EAF8;
-            padding: 8px 15px;
-            border-radius: 15px;
-            margin-top: 20px;
-            display: inline-block;
-            font-family: "Microsoft YaHei", sans-serif;
-        }
-
-        h3 {
-            color: #E67E22;
-            font-size: 20px;
-            font-weight: bold;
-            margin-top: 20px;
-            border-left: 5px solid #E67E22;
-            padding-left: 10px;
-            font-family: "Microsoft YaHei", sans-serif;
-        }
-
-        /* 正文样式 */
-        p,
-        li {
-            font-size: 22px;
-            text-align: justify;
-            margin-bottom: 10px;
-            margin-top: 10px;
-        }
-
-        /* 战术板/计算纸样式 */
-        .math-paper {
-            /* background-image: linear-gradient(#cfcfcf 1px, transparent 1px), linear-gradient(90deg, #cfcfcf 1px, transparent 1px); */
-            background-size: 20px 20px;
-            background-color: #fff;
-            border: 2px solid #aaa;
-            padding: 0 20px;
-            margin: 20px 0;
-            box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
-            font-family: "Consolas", "Courier New", monospace;
-            font-size: 24px;
-        }
-
-        /* 重点便利贴 */
-        .sticky-note {
-            background-color: #FFF9C4;
-            border: 1px solid #F1C40F;
-            padding: 15px;
-            transform: rotate(-1deg);
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-            margin: 20px 0;
-            font-size: 24px;
-            transition: transform 0.3s;
-        }
-
-        /* 对话框 */
-        .dialogue {
-            border-left: 4px solid #FF9F43;
-            padding-left: 10px;
-            margin: 10px 0;
-            font-style: italic;
-            color: #555;
-            background-color: #FFF3E0;
-            border-radius: 0 10px 10px 0;
-        }
-
-        /* 表格样式 */
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 15px 0;
-            border: 2px solid #333;
-            table-layout: fixed;
-        }
-
-        th,
-        td {
-            border: 1px solid #333;
-            padding: 10px;
-            text-align: center;
-            font-size: 18px;
-            word-break: break-word;
-        }
-
-        th {
-            background-color: #FFCC80;
-            font-weight: bold;
-            font-family: 'Noto Sans SC', sans-serif;
-        }
-
-        /* 图片占位符 */
-        .img-placeholder {
-            width: 100%;
-            background-color: #f0f0f0;
-            border: 3px dashed #bbb;
-            border-radius: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #888;
-            margin: 15px 0;
-            position: relative;
-            font-style: italic;
-        }
-
-        .img-caption {
-            text-align: center;
-            font-size: 18px;
-            color: #666;
-            margin-top: -5px;
-            margin-bottom: 20px;
-            font-style: italic;
-        }
-
-        /* Chinese text with Noto Sans SC font */
-        .chinese-label {
-            font-family: 'Noto Sans SC', sans-serif;
-        }
-
-        /* 页脚 */
-        .footer {
-            position: absolute;
-            bottom: 15mm;
-            left: 25mm;
-            right: 20mm;
-            border-top: 2px solid #333;
-            padding-top: 10px;
-            display: flex;
-            justify-content: space-between;
-            font-size: 22px;
-        }
-
-        .handwriting-box {
-            /* Adds 40mm of empty space to the right of the text */
-            padding-right: 40mm;
-        }
-
-        .page-number {
-            position: absolute;
-            bottom: 10mm;
-            right: 10mm;
-            font-weight: bold;
-            color: #D35400;
-            font-size: 18px;
-        }
-
-        .chapter-2-marker {
-            position: absolute;
-            top: 56mm;
-            right: 0;
-            width: 10mm;
-            height: 29mm;
-            background-color: #FF9F43;
-        }
-
-        .a4-height-indicator {
-            position: absolute;
-            top: 297mm;
-            left: 0;
-            right: 0;
-            border-top: 2px dashed red;
-            z-index: 100;
-        }
-
-        /* Toggle button styles */
-        #toggle-dark-text-btn {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            padding: 15px 25px;
-            background-color: #E67E22;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 16px;
-            font-weight: bold;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-            z-index: 1000;
-            transition: all 0.3s ease;
-        }
-
-        #toggle-dark-text-btn:hover {
-            background-color: #D35400;
-            transform: translateY(-2px);
-            box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
-        }
-
-        #toggle-other-elements-btn {
-            position: fixed;
-            top: 80px;
-            right: 20px;
-            padding: 15px 25px;
-            background-color: #2E86C1;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 16px;
-            font-weight: bold;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-            z-index: 1000;
-            transition: all 0.3s ease;
-        }
-
-        #toggle-other-elements-btn:hover {
-            background-color: #1F618D;
-            transform: translateY(-2px);
-            box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
-        }
-
-        /* STATE: Hide Dark Text 
-           Keeps the layout/colors, but makes text invisible 
-        */
-        body.hide-dark-text p,
-        body.hide-dark-text li,
-        body.hide-dark-text .dialogue,
-        body.hide-dark-text .sticky-note,
-        body.hide-dark-text .img-caption,
-        body.hide-dark-text th,
-        body.hide-dark-text td,
-        body.hide-dark-text .chinese-label {
-            color: transparent !important;
-        }
-
-        /* STATE: Hide Decorative Elements 
-           Goal: Clean text only. No borders, no backgrounds, no images, no headers.
-        */
-
-        /* 1. Reset Body to plain white */
-        body.hide-other-elements {
-            background-color: #ffffff !important;
-        }
-
-        /* 2. Global reset for all elements inside body when hidden:
-              - Remove background colors/images
-              - Remove borders
-              - Remove shadows 
-              - Reset rotation (transform)
-        */
-        body.hide-other-elements * {
-            background-image: none !important;
-            background-color: transparent !important;
-            border: none !important;
-            box-shadow: none !important;
-            transform: none !important;
-            /* Straightens the sticky notes */
-        }
-
-        /* 3. Specifically hide the Headings and Images completely (Visibility Hidden) */
-        body.hide-other-elements h1,
-        body.hide-other-elements h2,
-        body.hide-other-elements h3,
-        body.hide-other-elements img,
-        body.hide-other-elements .chapter-2-marker,
-        body.hide-other-elements .a4-height-indicator {
-            visibility: hidden !important;
-        }
-
-        /* 4. Ensure Page Numbers disappear if considered decoration */
-        body.hide-other-elements .page-number,
-        body.hide-other-elements .footer {
-            display: none !important;
-        }
-
-        @media print {
-            body {
-                background-color: #fff;
-                padding: 0;
-                margin: 0;
-            }
-
-            .sheet {
-                margin: 0;
-                box-shadow: none;
-            }
-
-            .page-number,
-            .a4-height-indicator,
-            #toggle-dark-text-btn,
-            #toggle-other-elements-btn {
-                display: none;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="settings/style.css">
 </head>
 
 
@@ -368,7 +41,6 @@
             <div class="sticky-note" style="width: 70%; margin: 20px auto; transform: rotate(2deg);">
                 <span class="chinese-label">我们的策略宣言：</span><br>
                 知己知彼，百战不殆！<br>巧用Beam，争取胜利！<br>
-                —— 叶恒瑞 (队长)
             </div>
         </div>
         <div class="page-number">21</div>
