FEAT: Standardize footer and A4 indicator across HTML chapters
- Centralized CSS to use theme variables for consistent styling.
- Applied new themeable stylesheet to ch02.html and ch03.html.
- Standardized footer HTML structure in ch03.html.
- Re-numbered ch03.html pages to start from 46.
- Documented footer structure and A4 height indicator in settings/formatting.md.

--- a/engineering_notebook/ch02.html
+++ b/engineering_notebook/ch02.html
@@ -12,7 +12,7 @@
 </head>
 
 
-<body>
+<body class="theme-orange">
     <!-- Toggle Buttons -->
     <button id="toggle-dark-text-btn" onclick="toggleDarkText()">
         📝 深色文字：显示
@@ -24,7 +24,7 @@
     <!-- ================= PAGE 21: 章节封面 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <div style="text-align: center; margin-top: 100px;">
             <h1 style="font-size: 56px; border: none; color: #E67E22;">规则大揭秘</h1>
             <h2 style="font-size: 36px; background: none; color: #555;">第二章：2025-2026 规则分析</h2>
@@ -49,7 +49,7 @@
     <!-- ================= PAGE 22: 2.1 游戏概览 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>2.1 这是一个什么游戏？</h1>
 
         <p>看着满是文字的《游戏手册》，这让人头晕。但是当我们结合视频看的时候，发现这个游戏超有意思！</p>
@@ -80,7 +80,7 @@
     <!-- ================= PAGE 23: 2.2 场地元素研究 (Pin) ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>2.2 场地上的宝贝们：Pin</h1>
 
         <div class="sticky-note">
@@ -108,7 +108,7 @@
     <!-- ================= PAGE 24: 2.2 场地元素研究 (Beam) ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>2.2 场地上的宝贝们：Beam</h1>
 
         <p><strong>2. Beam (梁)</strong></p>
@@ -132,7 +132,7 @@
     <!-- ================= PAGE 25: 2.2 场地元素研究 (Goals) ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>2.2 场地上的宝贝们：Goals</h1>
 
         <p><strong>3. Goals (得分区)</strong></p>
@@ -169,14 +169,14 @@
     <!-- ================= PAGE 26: 2.3 机器人尺寸 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>2.3 机器人能长多大？</h1>
 
         <p>我们拿着尺子仔细量了那个起始框，生怕超了一点点，不然连比赛都参加不了。</p>
 
         <h2>尺寸限制 &lt;R5&gt;</h2>
         <p>在比赛开始前，我们的机器人必须缩在一个很小的空间里：</p>
-        <div class="math-paper" style="text-align: center; font-size: 24px; color: #D35400;">
+        <div class="math-paper" style="text-align: center; font-size: 24px; color: var(--primary-color);">
             11英寸 x 20英寸 x 15英寸<br>
             (279.4mm x 508mm x 381.0mm)
         </div>
@@ -204,7 +204,7 @@
     <!-- ================= PAGE 27: 2.3 进球规则 <SG6> ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>2.3 怎么投喂机器人？</h1>
 
         <p>这次比赛我们还可以当 Loader（装填手），给机器人喂 Pin。</p>
@@ -230,7 +230,7 @@
     <!-- ================= PAGE 28: 2.4 基础得分 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>2.4 怎么才能得高分？</h1>
 
         <p><strong>叶恒瑞</strong>是我们的“数学家”，他带着我们把得分规则算了一遍。</p>
@@ -264,7 +264,7 @@
     <!-- ================= PAGE 29: 2.4 匹配规则 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>2.4 颜色匹配的秘密</h1>
 
         <p>我们仔细研究了 Matching Goal Bonus。规则说，Stack 只要符合下面其中一个条件，就能得到匹配分（加10分！）哦：</p>
@@ -290,7 +290,7 @@
     <!-- ================= PAGE 30: 2.4 容易忽略的规则 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>2.4 别被扣分了！</h1>
 
         <!-- <p>我们还发现了一些容易犯错的地方：</p> -->
@@ -324,7 +324,7 @@
 
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>2.4 算分大挑战 (Scoring Examples)</h1>
 
         <p>为了熟悉计分规则，我们找了 10 个例子来练习算分。这些例子都在官方手册上能找到哦！</p>
@@ -380,7 +380,7 @@
     <!-- ================= PAGE 32: Scoring Examples (续) ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>2.4 算分大挑战 (Scoring Examples) 续</h1>
 
 
@@ -440,7 +440,7 @@
     <!-- ================= PAGE 33: 换手规则 &lt;GG11&gt; ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>2.5 团队赛：换手惊魂</h1>
         <p>宋书月最关心这个规则，因为她是操控手。规则说必须在 35秒 到 25秒 之间换人。</p>
 
@@ -464,7 +464,7 @@
     <!-- ================= PAGE 34: 技能赛规则 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>2.6 技能赛特别规则</h1>
 
         <p>除了团队赛，我们还要打技能赛。技能赛的场地有点不一样。</p>
@@ -492,7 +492,7 @@
     <!-- ================= PAGE 35: 设计约束总结 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>2.7 设计约束总结</h1>
 
         <p>综合上面的所有规则，我们给设计组提了几点“死命令”：</p>
@@ -515,7 +515,7 @@
     <!-- ================= PAGE 36: 策略模拟封面 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <div style="text-align: center; margin-top: 100px;">
             <h1 style="font-size: 48px; color: #2E86C1;">2.8 我们的战术推演</h1>
 
@@ -543,7 +543,7 @@
     <!-- ================= PAGE 37: 策略 A - 低空快跑 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>策略 A：低空快跑流 (Low & Fast)</h1>
 
         <p><span class="chinese-label">想法：</span> 宋书月建议我们做一个跑得飞快的车，专攻地面的得分区。不去管那个难搞的高塔。</p>
@@ -584,7 +584,7 @@
     <!-- ================= PAGE 38: 策略 B - 高塔建筑师 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>策略 B：高塔建筑师 (Tower Builder)</h1>
 
         <p><span class="chinese-label">想法：</span> 根据规则，放在 Standoff Goal 上的 Stack，可以得到 10 分 Standoff Goal 奖励。
@@ -619,7 +619,7 @@
     <!-- ================= PAGE 39: 策略 C - Beam 专家 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>策略 C：Beam 专家 (Beam Strategist)</h1>
 
         <p><span class="chinese-label">想法：</span> 根据 &lt;SC3-c-iii&gt; ，Beam 可以作为Stack的一部分，并可以算作1种颜色，帮助获取多色奖励；又根据
@@ -643,7 +643,7 @@
     <!-- ================= PAGE 40: 策略 C 详细计算 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>策略 C：详细计算</h1>
 
         <div class="math-paper">
@@ -680,7 +680,7 @@
     <!-- ================= PAGE 41: 策略 D - 高塔上的圣杯 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>策略 D：高塔上的圣杯</h1>
 
         <p><span class="chinese-label">想法：</span> 高塔奖励是针对每一个架在高塔上的 Stack 的，而像 &lt;SC2&gt; 这样的3联“奖杯” Stack 其实是3个
@@ -726,7 +726,7 @@
     <!-- ================= PAGE 42: 策略 D 评价 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>策略 D：评价</h1>
 
         <p>这个分数 (278分) 比策略C的248分高出整整30分！这30分完全来自于高塔奖励，证明了攻克高塔是值得的。</p>
@@ -753,7 +753,7 @@
     <!-- ================= PAGE 43: 最终策略决定 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>最终策略决定</h1>
 
         <p>经过四轮推演，我们全票通过了以 <strong>策略 D “高塔上的圣杯”</strong> 为我们的主要研发方向！</p>
@@ -776,7 +776,7 @@
     <!-- ================= PAGE 44: 章节总结 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>第二章总结：方向对了！</h1>
 
         <div class="sticky-note">
@@ -810,7 +810,7 @@
     <!-- ================= PAGE 45: 附录：规则笔记 (1) ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
+        <div class="chapter-marker"></div>
         <h1>附录：我的规则小抄</h1>
         <div class="math-paper">
             <p><strong>SC3:</strong> Connected = 垂直 + 不碰机器人</p>
@@ -843,7 +843,7 @@
             if (darkTextVisible) {
                 document.body.classList.remove('hide-dark-text');
                 btn.textContent = '📝 深色文字：显示';
-                btn.style.backgroundColor = '#E67E22';
+                btn.style.backgroundColor = 'var(--secondary-color)';
             } else {
                 document.body.classList.add('hide-dark-text');
                 btn.textContent = '📝 深色文字：隐藏';
