add rule code for ch02

--- a/engineering_notebook/ch02.html
+++ b/engineering_notebook/ch02.html
@@ -235,17 +235,18 @@
 
         <p><strong>叶恒瑞</strong>是我们的“数学家”，他带着我们把得分规则算了一遍。</p>
         <ul>
-            <li><span class="chinese-label">连在一起的 Pin：</span> +1 分。太少了，也就是个辛苦钱。</li>
-            <li><span class="chinese-label">连在一起的 Beam：</span> +10 分。<strong>巨款！</strong> 必须拿！</li>
-            <li><span class="chinese-label">2种颜色混搭：</span> +5 分。还行，不拿白不拿。</li>
-            <li><span class="chinese-label">2种颜色混搭：</span> +5 分。<strong>超级加倍！</strong> 一定要凑齐3色！</li>
+            <li><span class="chinese-label">连在一起的 Pin &lt;SC3&gt;：</span> +1 分。太少了，也就是个辛苦钱。</li>
+            <li><span class="chinese-label">连在一起的 Beam &lt;SC3&gt;：</span> +10 分。<strong>巨款！</strong> 必须拿！</li>
+            <li><span class="chinese-label">2种颜色混搭 &lt;SC4&gt;：</span> +5 分。还行，不拿白不拿。</li>
+            <li><span class="chinese-label">3种颜色混搭 &lt;SC4&gt;：</span> +15 分。<strong>超级加倍！</strong> 必须凑齐3色！</li>
         </ul>
         <p>除了基础分，还有好多 Bonus（奖励分）！</p>
 
         <ul>
-            <li><span class="chinese-label">颜色匹配 (Matching)：</span> +10 分。把红的放红区，蓝的放蓝区。</li>
-            <li><span class="chinese-label">高塔奖励 (Standoff)：</span> +10 分。只要挂在中间那个塔上就有。</li>
-            <li><span class="chinese-label">清空起始桩 (Cleared)：</span> +2 分。每个桩拿走就给分。</li>
+            <li><span class="chinese-label">颜色匹配 (Matching) &lt;SC6&gt;：</span> +10 分。把红的放红区，蓝的放蓝区。</li>
+            <li><span class="chinese-label">高塔奖励 (Standoff) &lt;SC5&gt;：</span> +10 分。只要挂在中间那个塔上就有。</li>
+            <li><span class="chinese-label">清空起始桩 (Cleared) &lt;SC7&gt;：</span> +2 分。每个桩拿走就给分。</li>
+            <li><span class="chinese-label">接触奖励 (Contact) &lt;SC8&gt;：</span> +2 分。比赛结束时摸着 Pin 或 Beam。</li>
         </ul>
 
         <div class="sticky-note">
@@ -265,9 +266,9 @@
     <div class="sheet">
         <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
-        <h1>2.4 颜色匹配的秘密</h1>
+        <h1>2.4 颜色匹配的秘密 &lt;SC6&gt;</h1>
 
-        <p>我们仔细研究了 Matching Goal Bonus。规则说，Stack 只要符合下面其中一个条件，就能得到匹配分（加10分！）哦：</p>
+        <p>我们仔细研究了 Matching Goal Bonus &lt;SC6&gt;。规则说，Stack 只要符合下面其中一个条件，就能得到匹配分（加10分！）哦：</p>
         <ol>
             <li>Stack 最底下的 Pin 颜色和它放进去的 Goal 颜色一样。</li>
             <img src="../assets/ch02/matching_goal_1.webp" alt="Load Zone"
@@ -278,7 +279,7 @@
                 style="width: 50%; display: block; margin: 15px auto;">
         </ol>
         <br>
-        <p>不过要注意，每个 Stack 最多只能获得一次匹配分奖励哦！</p>
+        <p>不过要注意，每个 Stack 最多只能获得一次匹配分奖励。这意味着，一个已经通过连接 Beam 获得匹配奖励的 Stack，无需再通过放入对应颜色的得分区来获得额外奖励。</p>
 
         <div class="footer">
             <span class="handwriting-box">日期：</span>
@@ -295,7 +296,7 @@
 
         <!-- <p>我们还发现了一些容易犯错的地方：</p> -->
 
-        <h3>1. 什么是 "Connected" (连接)？</h3>
+        <h3>1. 什么是 "Connected" (连接)？&lt;SC3&gt;</h3>
         <p>规则说，一个Pin要被认为是“连接”上的，必须同时满足以下条件：</p>
         <ol>
             <li>它要完完全全地‘嵌套’在另一个得分物品里面。</li>
