--- a/engineering_notebook/ch03.html
+++ b/engineering_notebook/ch03.html
@@ -54,10 +54,7 @@
             </p>
         </div>
 
-        <div class="img-placeholder" style="height: 200px;">
-            [Image of Friction Concept]
-            [图片：印涵邸画的手绘图，画了一个爪子抓着 Pin，旁边画了几个向上的箭头表示摩擦力]
-        </div>
+        <img src="../assets/ch03/3_1_s.webp" alt="摩擦力示意图" style="height: 350px; display: block; margin: 15px auto;">
 
         <p class="dialogue"><strong>叶恒嘉：</strong> “原来橡皮筋这么厉害，这就是科学的力量啊！”</p>
 
@@ -74,26 +71,32 @@
         <div class="chapter-marker"></div>
         <h1>3.1 STEM 是什么？(续)</h1>
 
-        <div class="knowledge-card">
+        <div class="knowledge-card" style="margin-bottom:0">
             <h3>T - Technology (技术)</h3>
             <p><strong>定义：</strong> 就是那些高科技的玩意儿，比如传感器、编程软件。</p>
             <p><strong>我们的应用：</strong>
-                <br>叶恒瑞最擅长这个！他用 <strong>陀螺仪 (Gyro)</strong> 告诉机器人怎么走直线，用 <strong>距离传感器</strong> 告诉机器人前面有墙壁。
+                我们用 <strong>陀螺仪 (Gyro)</strong> 告诉机器人怎么走直线，用 <strong>距离传感器</strong> 告诉机器人前面有墙壁。
             </p>
         </div>
+        <img src="../assets/ch03/3_1_te.webp" alt="摩擦力示意图" style="width: 100%; display: block; margin: 0 auto;">
 
-        <div class="knowledge-card">
+        <div class="knowledge-card" style="margin-top:0">
             <h3>E - Engineering (工程)</h3>
-            <p><strong>定义：</strong> 就是把想法变成现实的过程。</p>
-            <p><strong>我们的应用：</strong>
-                <br>从画草图，到搭积木，再到测试、修改，这就是在做工程！我们学会了一个词叫<strong>“迭代 (Iteration)”</strong>，就是一遍遍地改，变得更好。
+            <p><strong>定义：</strong> 像工程师一样思考，把好点子变成现实。</p>
+            <p><b>我们的应用：</b> 在机器人设计中，我们体验了工程设计流程：
+            <ul>
+                <li><b>询问 (Ask):</b> 理解比赛规则。</li>
+                <li><b>构思 (Imagine & Plan):</b> 想象各种方案，绘制草图。</li>
+                <li><b>创造 (Create):</b> 动手将图纸上的想法变成实物。</li>
+                <li><b>迭代 (Iterate):</b> 我们不畏惧失败，通过“测试”和“改进”的不断循环，让机器人越来越强大！</li>
+            </ul>
             </p>
         </div>
 
-        <div class="img-placeholder" style="height: 180px;">
+        <!-- <div class="img-placeholder" style="height: 180px;">
             [Image of Engineering Design Process]
             [图片：我们画的工程设计循环图：想 -> 做 -> 试 -> 改 -> 再想]
-        </div>
+        </div> -->
 
         <div class="footer">
             <span class="handwriting-box">日期：</span>
