ch01: added season_plan

--- a/engineering_notebook/ch01.html
+++ b/engineering_notebook/ch01.html
@@ -247,6 +247,43 @@
              <p>如果意见不统一，我们就分头搭样机，谁的跑得好听谁的。</p>
         </div>
 
+        <h2>1.3 我们的冒险地图 (赛季规划)</h2>
+        <p>我们为这个赛季画好了一张“冒险地图”！每一步都要踩稳哦！</p>
+        <table>
+            <thead>
+                <tr>
+                    <th>时间</th>
+                    <th>我们的小目标</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>六月</td>
+                    <td>研究规则，当个“规则小博士”，然后做出我们的一代车！</td>
+                </tr>
+                <tr>
+                    <td>七月</td>
+                    <td>带着一代车去参加个小比赛，看看它几斤几两，然后回家“升级”它！</td>
+                </tr>
+                <tr>
+                    <td>八月</td>
+                    <td>参加城市赛，希望能战胜其他队伍，拿到去大区赛的“门票”！</td>
+                </tr>
+                <tr>
+                    <td>十月</td>
+                    <td>挑战市级邀请赛，如果能赢，我们就有机会去国赛啦！</td>
+                </tr>
+                <tr>
+                    <td>十一月</td>
+                    <td>参加“白名单”比赛，多积累经验，继续给机器人“加装备”！</td>
+                </tr>
+                <tr>
+                    <td>十二月</td>
+                    <td>向亚洲公开赛出发！如果表现得好，说不定就能去世界锦标赛了！想想就激动！</td>
+                </tr>
+            </tbody>
+        </table>
+
         <div class="footer"><span>见证人：全员</span></div>
         <div class="page-number">4</div>
     </div>
