ch03: add pic for 3_1_m

--- a/engineering_notebook/ch03.html
+++ b/engineering_notebook/ch03.html
@@ -121,6 +121,7 @@
                 <br>3. 算角度：自动程序里，我们要算机器人转多少度才能对准 Goal。
             </p>
         </div>
+        <img src="../assets/ch03/3_1_m.webp" alt="数学的力量" style="height:350px; display: block; margin: 0 auto;">
 
         <div class="sticky-note">
             <strong>感悟：</strong> 以前觉得数学课很枯燥，现在发现数学太有用了！算错了数，机器人就会撞墙！
@@ -137,7 +138,7 @@
     <div class="sheet">
         <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
-        <h1>3.2 戴着镣铐跳舞 (Constraints)</h1>
+        <h1>3.2 边界中的自由 (Constraints)</h1>
 
         <p>王老师说，真正的工程师都是在<strong>约束 (Constraints)</strong> 下工作的。规则就是我们的约束。</p>
 
