ch02: cover sticky no more transform

--- a/engineering_notebook/ch02.html
+++ b/engineering_notebook/ch02.html
@@ -38,7 +38,7 @@
                 <p style="margin-top: 10px;"><span class="chinese-label">最重大的发现：</span> Beam (梁) 竟然是分数倍增器！</p>
             </div>
 
-            <div class="sticky-note" style="width: 70%; margin: 20px auto; transform: rotate(2deg);">
+            <div class="sticky-note" style="width: 70%; margin: 20px auto;">
                 <span class="chinese-label">我们的策略宣言：</span><br>
                 知己知彼，百战不殆！<br>巧用Beam，争取胜利！<br>
             </div>
