ch03: added connecting words and adjusted image margin

--- a/engineering_notebook/ch03.html
+++ b/engineering_notebook/ch03.html
@@ -78,7 +78,7 @@
                 我们用 <strong>陀螺仪 (Gyro)</strong> 告诉机器人怎么走直线，用 <strong>距离传感器</strong> 告诉机器人前面有墙壁。
             </p>
         </div>
-        <img src="../assets/ch03/3_1_te.webp" alt="摩擦力示意图" style="width: 100%; display: block; margin: 0 auto;">
+        <img src="../assets/ch03/3_1_te.webp" alt="摩擦力示意图" style="width: 100%; display: block; margin: 10px auto;">
 
         <div class="knowledge-card" style="margin-top:0">
             <h3>E - Engineering (工程)</h3>
@@ -121,11 +121,13 @@
                 <br>3. 算角度：自动程序里，我们要算机器人转多少度才能对准 Goal。
             </p>
         </div>
-        <img src="../assets/ch03/3_1_m.webp" alt="数学的力量" style="height:350px; display: block; margin: 0 auto;">
+        <img src="../assets/ch03/3_1_m.webp" alt="数学的力量" style="height:320px; display: block; margin: 0 auto;">
 
-        <div class="sticky-note">
+        <!-- <div class="sticky-note">
             <strong>感悟：</strong> 以前觉得数学课很枯燥，现在发现数学太有用了！算错了数，机器人就会撞墙！
-        </div>
+        </div> -->
+
+        <p class="dialogue">了解了STEM，我们就像是有了内功心法！不过，光有理论还不行，真正的工程师，都是在各种条条框框（约束）里，想办法解决问题的。下一节，我们就来看看，今年的比赛，给我们设定了哪些“边界”！</p>
 
         <div class="footer">
             <span class="handwriting-box">日期：</span>
@@ -138,7 +140,7 @@
     <div class="sheet">
         <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
-        <h1>3.2 边界中的自由 (Constraints)</h1>
+        <h1>3.2 “边界”中的自由 (Constraints)</h1>
 
         <p>王老师说，真正的工程师都是在<strong>约束 (Constraints)</strong> 下工作的。规则就是我们的约束。</p>
 
@@ -163,7 +165,7 @@
     <div class="sheet">
         <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
-        <h1>3.2 戴着镣铐跳舞 (续)</h1>
+        <h1>3.2 “边界”中的自由 (续)</h1>
 
         <h3>2. 只有 6 个电机 &lt;R11&gt;</h3>
         <p><strong>约束：</strong> 只能用 6 个智能电机。</p>
@@ -180,6 +182,8 @@
         <h3>3. 只能向上长 &lt;SG2&gt;</h3>
         <p><strong>约束：</strong> 只能变高，不能变宽。</p>
         <p><strong>影响：</strong> 我们不能做那种横着张开的大翅膀去一次抓一排 Pin，只能老老实实做一个一个抓的爪子。</p>
+
+        <p class="dialogue">这些“边界”虽然限制了我们，但也激发了我们的创造力！为了在这些约束下做到最好，我们就得请出我们的“秘密武器”——机械原理！让我们看看，小小的齿轮和杠杆，能爆发出多大的能量！</p>
 
         <div class="footer">
             <span class="handwriting-box">日期：</span>
@@ -242,6 +246,8 @@
 
             [图片：画了一个跷跷板，一头是重重的 Beam，另一头是橡皮筋在帮忙拉，电机在中间笑得很开心]
         </div>
+
+        <p class="dialogue">有了这些机械魔法，我们的机器人就像有了强壮的“身体”。但光有身体还不够，还得有个聪明的“大脑”来指挥它！接下来，就让我们进入编程的世界，看看怎么让机器人“活”起来！</p>
 
         <div class="footer">
             <span class="handwriting-box">日期：</span>
