ch01: added process diagram ch03: added image 3_2.webp

--- a/engineering_notebook/ch01.html
+++ b/engineering_notebook/ch01.html
@@ -283,37 +283,20 @@
                 </tr>
             </tbody>
         </table>
+        <div class="footer"><span>见证人：全员</span></div>
+        <div class="page-number">4</div>
+    </div>
 
+    <div class="sheet">
         <h2>1.4 赛季流程图</h2>
         <p>我们给自己定下了一个行动指南，就像玩游戏做任务一样！</p>
-        <div style="font-family: 'SimHei', sans-serif; text-align: center; font-size: 16px; border: 2px dashed #F39C12; padding: 15px; border-radius: 10px;">
-            <div style="background-color: #fef9e7; padding: 10px; border-radius: 5px; margin-bottom: 5px;">学习消化规则</div>
-            <div style="font-size: 24px; color: #E67E22;">↓</div>
-            <div style="background-color: #fef9e7; padding: 10px; border-radius: 5px; margin-bottom: 5px;">头脑风暴</div>
-            <div style="font-size: 24px; color: #E67E22;">↓</div>
-            <div style="background-color: #fef9e7; padding: 10px; border-radius: 5px; margin-bottom: 5px;">定策略、选方案</div>
-            <div style="font-size: 24px; color: #E67E22;">↓</div>
-            <div style="background-color: #fef9e7; padding: 10px; border-radius: 5px; margin-bottom: 5px;">搭建调试赛车</div>
-            <div style="font-size: 24px; color: #E67E22;">↓</div>
-            <div style="background-color: #fef9e7; padding: 10px; border-radius: 5px; margin-bottom: 5px;">编写调试程序</div>
-            <div style="font-size: 24px; color: #E67E22;">↓</div>
-            <div style="background-color: #fef9e7; padding: 10px; border-radius: 5px; margin-bottom: 5px;">训练磨合</div>
-            <div style="font-size: 24px; color: #E67E22;">↓</div>
-            <div style="background-color: #fef9e7; padding: 10px; border-radius: 5px; margin-bottom: 5px;">参加比赛</div>
-            <div style="font-size: 24px; color: #E67E22;">↓</div>
-            <div style="background-color: #fef9e7; padding: 10px; border-radius: 5px; margin-bottom: 5px;">发现问题</div>
-            <div style="font-size: 24px; color: #E67E22; ">↺</div>
-            <div style="background-color: #fef9e7; padding: 10px; border-radius: 5px;">改进赛车</div>
-        </div>
+        <iframe src="ch01_process_diagram.html" style="width: 100%; border: none;" onload="this.style.height=this.contentWindow.document.body.scrollHeight+'px';" scrolling="no"></iframe>
         <div class="diary-card" style="margin-top: 30px; border-color: #E74C3C; text-align:center;">
             <p><strong>我们的目标</strong></p>
             <p>认真学习、稳步精进（成长）、全力以赴、功到自成</p>
         </div>
-
-
-
-        <div class="footer"><span>见证人：全员</span></div>
-        <div class="page-number">4</div>
+        <div class="footer"><span>记录人：印涵邸</span></div>
+        <div class="page-number">5</div>
     </div>
 
     <!-- ================= PAGE 5-13 省略中间常规计划部分，直接进入改写后的会议记录 ================= -->
