--- a/engineering_notebook/ch03.html
+++ b/engineering_notebook/ch03.html
@@ -146,13 +146,14 @@
 
         <h3>1. 那个小小的盒子 &lt;R5&gt;</h3>
         <p><strong>约束：</strong> 机器人出发时必须能塞进 11" x 20" x 15" 的框里。</p>
-        <p><strong>我们的挑战：</strong> 高塔有 12 英寸高，加上 Pin 肯定超高了。如果做个固定的长脖子，肯定塞不进去。</p>
-        <p><strong>叶恒嘉的解决方案：</strong> 折叠！我们要做一个像折叠伞一样的升降机，或者像手臂一样的四连杆，出发时缩起来，比赛开始了再伸长！</p>
-
-        <div class="img-placeholder" style="height: 250px;">
+        <p><strong>我们的挑战：</strong> 根据游戏手册附录 A (Appendix A)，高塔有 9.5 英寸高，加上 Pin 肯定超高了。如果做个固定的长脖子，肯定塞不进去。</p>
+        <p><strong>叶恒嘉的解决方案：</strong> 我们需要模仿叉车的运作方式，制作一个多级升降机。这样既保证了机器人能顺利“塞”进起始框，又能在比赛开始后灵活“长高”。</p>
+        <br>
+        <!-- <div class="img-placeholder" style="height: 250px;">
 
             [图片：画了一个小盒子，里面塞着我们的机器人，旁边画了一个箭头，机器人伸展开变得很高大]
-        </div>
+        </div> -->
+        <img src="../assets/ch03/3_2.webp" alt="无限垂直扩展" style="height:320px; display: block; margin: 0 auto;">
 
         <div class="footer">
             <span class="handwriting-box">日期：</span>
